api,be: update API reference, clean up
