# api/reference/openapi.yaml
@@ -14,43 +14,6 @@ servers:
   - url: "https://api.timeterm.nl/"
 
 paths:
-  /user/me:
-    get:
-      operationId: getCurrentUser
-      summary: Get the current user
-      responses:
-        "200":
-          description: A User object
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/User"
-
-  /device/registrationconfig:
-    get:
-      operationId: getDeviceRegistrationConfig
-      summary: Get the device registration configuration
-      responses:
-        "200":
-          description: OK
-          content:
-            application/json:
-              schema:
-                required:
-                  - token
-                  - networkingConfig
-                properties:
-                  token:
-                    type: string
-                  networkingConfig:
-                    required:
-                      - services
-                    properties:
-                      services:
-                        type: array
-                        items:
-                          $ref: "#/components/schemas/NetworkingService"
-
   /device:
     post:
       operationId: registerDevice
@@ -58,7 +21,7 @@ paths:
       description: |
         Register a new device
 
-        > NOTE: this API call can only be performed by devices.
+        May only be performed by devices (with a setup token).
       requestBody:
         content:
           application/json:
@@ -72,7 +35,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/CreateDeviceResponse"
         default:
-          $ref: "#/components/responses/ProblemResponse"
+          $ref: "#/components/responses/ErrorResponse"
     get:
       operationId: getDevices
       summary: List devices
@@ -115,24 +78,6 @@ paths:
         "204":
           description: No content
 
-  /device/restart:
-    post:
-      operationId: rebootDevices
-      summary: Reboot a list of devices
-      requestBody:
-        content:
-          application/json:
-            schema:
-              properties:
-                deviceIds:
-                  type: array
-                  items:
-                    type: string
-                    format: uuid
-      responses:
-        "200":
-          description: No content
-
   /device/{id}:
     get:
       operationId: getDevice
@@ -170,6 +115,10 @@ paths:
     get:
       operationId: getDeviceNatsCredentials
       summary: Get NATS credentials for a device
+      description: |
+        Get NATS credentials for a device
+
+        May only be performed by a device.
       responses:
         "200":
           description: NATS credentials
@@ -178,13 +127,23 @@ paths:
               schema:
                 $ref: "#/components/schemas/NatsCredentials"
 
-  /device/{id}/reboot:
-    post:
-      operationId: rebootDevice
-      summary: Reboot a device
+  /devcice/{id}/config/networks:
+    get:
+      operationId: getAllNetworkingServices
+      summary: Get all networking services (for a device)
+      description: |
+        Get all networking services (for a device) in the organization
+
+        May only be performed by a device.
       responses:
         "200":
-          description: OK
+          description: Networking services
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/NetworkingService"
 
   /device/{id}/heartbeat:
     post:
@@ -197,57 +156,59 @@ paths:
         "204":
           description: No content
 
-  /zermelo/appointment:
-    get:
-      operationId: getZermeloAppointments
-      summary: Get a list of (Zermelo) appointments
-      parameters:
-        - name: X-Card-Uid
-          in: header
-          required: true
-          schema:
-            type: string
-        - name: startTime
-          in: header
-          required: true
-          schema:
-            type: string
-            format: date-time
-        - name: endTime
-          in: header
-          required: true
-          schema:
-            type: string
-            format: date-time
+  /device/{id}/reboot:
+    post:
+      operationId: rebootDevice
+      summary: Reboot a device
       responses:
         "200":
-          description: A list of appointments
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Appointments"
-        default:
-          $ref: "#/components/responses/ProblemResponse"
+          description: OK
 
-  /student/self:
+  /device/registrationconfig:
     get:
-      operationId: getStudentSelf
-      summary: Get information about the current student
-      parameters:
-        - name: X-Card-Uid
-          in: header
-          required: true
-          schema:
-            type: string
+      operationId: getDeviceRegistrationConfig
+      summary: Get the device registration configuration
       responses:
         "200":
-          description: Student information
+          description: OK
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Student"
-        default:
-          $ref: "#/components/responses/ProblemResponse"
+                required:
+                  - token
+                  - networkingServices
+                properties:
+                  token:
+                    type: string
+                  organizationId:
+                    type: string
+                    format: uuid
+                  networkingServices:
+                    required:
+                      - services
+                    properties:
+                      services:
+                        type: array
+                        items:
+                          $ref: "#/components/schemas/NetworkingService"
+
+  /device/restart:
+    post:
+      operationId: rebootDevices
+      summary: Reboot a list of devices
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                deviceIds:
+                  type: array
+                  items:
+                    type: string
+                    format: uuid
+      responses:
+        "200":
+          description: No content
 
   /organization/{organizationId}:
     get:
@@ -373,7 +334,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/Student"
         default:
-          $ref: "#/components/responses/ProblemResponse"
+          $ref: "#/components/responses/ErrorResponse"
     get:
       operationId: getStudents
       summary: List students
@@ -440,6 +401,35 @@ paths:
               schema:
                 $ref: "#/components/schemas/Student"
 
+  /user/me:
+    get:
+      operationId: getCurrentUser
+      summary: Get the current user
+      responses:
+        "200":
+          description: A User object
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+  
+  /user/:id:
+    patch:
+      operationId: patchUser
+      summary: Patch a user
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/User"
+      responses:
+        "200":
+          description: The patched user
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+
   /zermelo/connect:
     post:
       operationId: connectZermelo
@@ -462,9 +452,83 @@ paths:
       responses:
         "200":
           description: Connected
+
+  /zermelo/appointment:
+    get:
+      operationId: getZermeloAppointments
+      summary: Get a list of (Zermelo) appointments
+      description: |
+        Get a list of (Zermelo) appointments
+
+        May only be performed by a device with a student signed in.
+      parameters:
+        - name: X-Card-Uid
+          in: header
+          required: true
+          schema:
+            type: string
+        - name: startTime
+          in: header
+          required: true
+          schema:
+            type: string
+            format: date-time
+        - name: endTime
+          in: header
+          required: true
+          schema:
+            type: string
+            format: date-time
+      responses:
+        "200":
+          description: A list of appointments
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Appointments"
+        default:
+          $ref: "#/components/responses/ErrorResponse"
+  
+  /zermelo/enrollment:
+    post:
+      operationId: enrollZermelo
+      summary: Change Zermelo appointment enrollment
+      description: |
+        Change Zermelo appointment enrollment (via a device)
+
+        May only be performed by a device with a student signed in.
+      parameters:
+        - name: X-Card-Uid
+          in: header
+          required: true
+          schema:
+            type: string
+        - name: unenrollFromParticipation
+          in: query
+          required: false
+          description: The ID of the AppointmentParticipation to unenroll from
+          schema:
+            type: integer
+        - name: enrollIntoParticipation
+          in: query
+          required: false
+          description: The ID of the AppointmentParticipation to enroll into
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Success
+        default:
+          $ref: "#/components/schemas/ErrorResponse"
+
 components:
   schemas:
     User:
+      required:
+        - id
+        - organizationId
+        - name
+        - email
       properties:
         id:
           type: string
@@ -478,27 +542,39 @@ components:
           type: string
 
     Appointments:
+      required:
+        - data
       properties:
         data:
           type: array
           items:
             $ref: "#/components/schemas/Appointment"
-        links:
-          type: object
-          properties:
-            choices:
-              type: string
 
     Appointment:
+      required:
+        - id
+        - participationId
+        - appointmentInstance
+        - startTimeSlotName
+        - endTimeSlotName
+        - subjects
+        - groups
+        - locations
+        - teachers
+        - startTime
+        - endTime
+        - content
+        - allowedStudentActions
       properties:
         id:
           type: integer
-          format: int64
           description: The ID of the appointment.
           example: 980803080
+        participationId:
+          type: integer
+          description: The ID of the appointment participation.
         appointmentInstance:
           type: integer
-          format: int64
           description: The instance of the appointment.
           example: 129304801
         isOnline:
@@ -542,24 +618,35 @@ components:
           description: The teachers present in the appointment.
           items:
             type: string
+        groups:
+          type: array
+          description: The groups participating in the appointment.
+          items:
+            type: string
         availableSpace:
           type: integer
           description: How many places are still open.
         startTime:
-          type: string
-          format: date-time
-          description: The time at which the appointment starts.
+          type: integer
+          format: int64
+          description: The time at which the appointment starts (UNIX seconds).
         endTime:
           type: string
-          format: date-time
-          description: The time at which the appointment ends.
-        isAttendancePlanned:
-          type: boolean
+          format: int64
+          description: The time at which the appointment ends (UNIX seconds).
         content:
           type: string
           description: The contents of the lesson
-        isAttendanceOverruled:
-          type: boolean
+        capacity:
+          type: integer
+          description: The maximum amount of attendants.
+        allowedStudentActions:
+          type: string
+          enum:
+            - None
+            - All
+            - Switch
+          description: Actions that the user is allowed to perform.
         alternatives:
           type: array
           items:
@@ -567,6 +654,11 @@ components:
 
     Student:
       type: object
+      required:
+        - id
+        - organizationId
+        - hasCardAssociated
+        - zermelo
       properties:
         id:
           type: string
@@ -576,6 +668,9 @@ components:
           type: string
           format: uuid
           description: The ID of the organization that the user is in.
+        hasCardAssociated:
+          type: boolean
+          description: Whether the user has a card associated or not.
         zermelo:
           properties:
             user:
@@ -614,28 +709,12 @@ components:
           format: uuid
         primaryStatus:
           $ref: "#/components/schemas/PrimaryDeviceStatus"
-        secondaryStatus:
-          $ref: "#/components/schemas/SecondaryDeviceStatus"
 
     PrimaryDeviceStatus:
       type: string
       enum:
         - Online
         - Offline
-
-    SecondaryDeviceStatus:
-      type: string
-      enum:
-        - NotActivated
-
-    DeviceAuth:
-      properties:
-        token:
-          type: string
-        links:
-          properties:
-            self:
-              type: string
 
     Pagination:
       properties:
@@ -675,25 +754,6 @@ components:
               type: array
               items:
                 $ref: "#/components/schemas/NetworkingService"
-
-    Problem:
-      description: An RFC7807 Problem Details Object.
-      properties:
-        type:
-          description: A URI reference [[RFC 3986](https://tools.ietf.org/html/rfc3986)] that identifies the problem type. If empty, assumed to be "about:blank".
-          type: string
-        title:
-          type: string
-          description: A short, human-readable summary of the problem type.
-        status:
-          type: integer
-          description: The HTTP status code ([[RFC 7231](https://tools.ietf.org/html/rfc7231#section-6)], Section 6) generated by the origin server for this occurrence of the problem.
-        detail:
-          type: string
-          description: A human-readable explanation specific to this occurrence of the problem.
-        instance:
-          type: string
-          description: A URI reference that identifies the specific occurrence of the problem. It may or may not yield further information if dereferenced.
 
     CreateDeviceResponse:
       properties:
@@ -839,13 +899,20 @@ components:
         credentials:
           type: string
 
+    Error:
+      required:
+        - message
+      properties:
+        message:
+          type: string
+
   responses:
-    ProblemResponse:
-      description: An RFC 7807 Problem Details Object response.
+    ErrorResponse:
+      description: An error.
       content:
         "application/json":
           schema:
-            $ref: "#/components/schemas/Problem"
+            $ref: "#/components/schemas/Error"
 
   securitySchemes:
     ApiKeyAuth:
