# backend/api/api.go
@@ -103,12 +103,12 @@ func (s *Server) registerRoutes() {
 	devGroup := g.Group("/device")
 	devGroup.GET("", s.getDevices)
 	devGroup.DELETE("", s.deleteDevices)
-	devGroup.POST("/restart", s.rebootDevices)
 	devGroup.GET("/:id", s.getDevice)
-	devGroup.POST("/:id/restart", s.rebootDevice)
 	devGroup.PATCH("/:id", s.patchDevice)
 	devGroup.DELETE("/:id", s.deleteDevice)
+	devGroup.POST("/:id/restart", s.rebootDevice)
 	devGroup.GET("/registrationconfig", s.getRegistrationConfig)
+	devGroup.POST("/restart", s.rebootDevices)
 
 	registrationLoginMiddleware := authn.DeviceRegistrationLoginMiddleware(s.db, s.log)
 	s.echo.POST("/device", registrationLoginMiddleware(s.createDevice))
@@ -127,16 +127,16 @@ func (s *Server) registerRoutes() {
 	orgGroup.GET("/:id", s.getOrganization)
 
 	stdGroup := g.Group("/student")
-	stdGroup.GET("/:id", s.getStudent)
-	stdGroup.PATCH("/:id", s.patchStudent)
 	stdGroup.GET("", s.getStudents)
 	stdGroup.POST("", s.createStudent)
 	stdGroup.DELETE("", s.deleteStudents)
+	stdGroup.GET("/:id", s.getStudent)
+	stdGroup.PATCH("/:id", s.patchStudent)
 
 	netServGroup := g.Group("/networking/service")
 	netServGroup.GET("", s.getNetworkingServices)
-	netServGroup.GET("/:id", s.getNetworkingService)
 	netServGroup.POST("", s.createNetworkingService)
+	netServGroup.GET("/:id", s.getNetworkingService)
 	netServGroup.PUT("/:id", s.replaceNetworkingService)
 	netServGroup.DELETE("/:id", s.deleteNetworkingService)
 
